# trait_test

./: Cargo.toml  README.md
src/: lib.rs
tests/: test1.rs
trait_test_examples/: Cargo.toml
trait_test_examples/src/: lib.rs
trait_test_macro/: Cargo.toml
trait_test_macro/src/: lib.rs
