[package]
name = "trait_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.70"
syn = "2.0.41"
quote = "1.0.33"
arbitrary = {version = "1.3.2", features = ["derive"]}

[lints.clippy]
pedantic = "warn"
cargo = "warn"
