[package]
name = "trait_test_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
trait_test_macro = {path="../trait_test_macro"}

quote = "1.0.33"
syn = { version = "2.0.41", features = ["full"]}

[lints.clippy]
pedantic = "warn"
cargo = "warn"
